<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_rounded_rectangle"
        android:layout_marginTop="3dp"
        android:elevation="2dp"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/relativeLayout18">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:id="@+id/relativeLayout15" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageview_setting_output_image"
                    android:layout_alignParentBottom="false"
                    android:layout_centerInParent="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_number"
                    android:id="@+id/textview_setting_output_number"
                    android:textColor="@color/text2"
                    android:paddingRight="2dp"
                    android:paddingLeft="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/relativeLayout15"
                android:layout_toEndOf="@+id/relativeLayout15"
                android:id="@+id/relativeLayout16" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentStart="false"
                    android:layout_centerInParent="true" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy"
                        android:id="@+id/textview_setting_output_name"
                        android:textColor="@color/text1"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/position"
                            android:maxWidth="35dp"
                            android:id="@+id/textView18"
                            android:width="52dp"
                            android:textColor="@color/text1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/double_dot"
                            android:id="@+id/textView20"
                            android:paddingRight="4dp"
                            android:textColor="@color/text1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dummy"
                            android:id="@+id/textview_setting_output_position"
                            android:textColor="@color/text1" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/power"
                            android:maxWidth="35dp"
                            android:id="@+id/textView22"
                            android:width="52dp"
                            android:textColor="@color/text1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/double_dot"
                            android:id="@+id/textView23"
                            android:paddingRight="4dp"
                            android:textColor="@color/text1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dummy"
                            android:id="@+id/textview_setting_output_power"
                            android:textColor="@color/text1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/watt"
                            android:paddingLeft="4dp"
                            android:id="@+id/textView25"
                            android:textColor="@color/text1" />
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/relativeLayout16"
                android:id="@+id/relativeLayout17"
                android:layout_toRightOf="@+id/relativeLayout16" >

                <Button
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/edit"
                    android:background="@drawable/button_grey"
                    android:textColor="@color/color_main_2"
                    android:id="@+id/button_edit_output_edit"
                    android:textSize="22sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>