<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_translucent"
    tools:context=".IoCommandForm">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"
        android:background="@drawable/background_rounded_rectangle_grey"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/relativeLayout">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/save"
                android:id="@+id/button_io_command_save"
                android:layout_margin="6dp"
                android:background="@drawable/button_flat"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relativeLayout"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:background="@drawable/background_rounded_rectangle"
            android:layout_alignParentTop="true"
            android:layout_marginTop="6dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:id="@+id/textView68"
                    android:textColor="@color/text2"
                    android:paddingLeft="6dp"
                    android:paddingTop="2dp"
                    android:textSize="18sp"
                    android:layout_marginRight="12dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_on_command"
                android:id="@+id/textView66"
                android:textColor="@color/text2"
                android:paddingLeft="6dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:layout_marginTop="12dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="38dp"
                    android:id="@+id/edittext_io_command_turn_on"
                    android:autoText="false"
                    android:background="@drawable/background_textfield"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:text="@string/test"
                        android:id="@+id/button_io_command_test_on"
                        android:background="@drawable/button_flat"
                        android:textColor="@android:color/white"
                        android:layout_alignParentTop="false"
                        android:layout_alignParentRight="false"
                        android:layout_alignParentEnd="false"
                        android:layout_centerInParent="true" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_off_command"
                android:id="@+id/textView67"
                android:textColor="@color/text2"
                android:paddingLeft="6dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="38dp"
                    android:id="@+id/edittext_io_command_turn_off"
                    android:background="@drawable/background_textfield"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:text="@string/test"
                        android:id="@+id/button_io_command_test_off"
                        android:background="@drawable/button_flat"
                        android:textColor="@android:color/white"
                        android:layout_alignParentTop="false"
                        android:layout_alignParentRight="false"
                        android:layout_alignParentEnd="false"
                        android:layout_centerInParent="true" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timer"
                    android:id="@+id/textView69"
                    android:textColor="@color/text2"
                    android:paddingLeft="6dp"
                    android:paddingTop="2dp"
                    android:layout_marginTop="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy"
                    android:textColor="@color/text2"
                    android:paddingLeft="6dp"
                    android:paddingTop="2dp"
                    android:layout_marginTop="12dp"
                    android:id="@+id/edittext_io_command_timerf" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
